<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="i_m_hungry">I\'m Hungry!</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="favorites">FAVORITES</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="go4lunch">GO4LUNCH</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="test">test</string>
    <string name="mychoicename">MychoiceName</string>
    <string name="mychoiceadress">MychoiceAdress</string>
    <string name="my_choice">My Choice</string>
    <string name="no_restaurant_choosen">No restaurant choosen</string>
    <string name="switchbutton">Switch</string>
    <string name="notification">Notification</string>
    <string name="choose_time_to_notification">Choose time to notification :</string>
    <string name="time_picker">Time Picker</string>
    <string name="place_open">place_open</string>
    <string name="_1200m">1200m</string>
    <string name="_0">(0)</string>
    <string name="textview">TextView</string>
    <string name="place_name">place_name</string>
    <string name="place_location">place_location</string>
    <string name="profil_name">profil name</string>
    <string name="home">home</string>
    <string name="place_name_">Place_name</string>
    <string name="place_adress">Place_Adress</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="app_name">Go4Lunch</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- BOTTOM MENU -->
    <string name="title_map">Map View</string>
    <string name="title_List">List View</string>
    <string name="title_Group">Workmates</string>


    <!--  NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  LoginActivity -->

    <string name="Error_to_login">Error login - Sorry :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="urlError">Url Error</string>
    <string name="phoneError">Phone Error</string>
    <string name="likeResto">It/\'s a match !</string>
    <string name="Search">Search</string>
    <string name="choice"> eat @ </string>
    <string name="nochoice"> haven\'t decided yet </string>

    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
    <string name="workmats">Availables workmates</string>
    <string name="favfrag">\" My Favorites\"</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="anglais">English</string>
    <string name="fran_ais">French</string>
    <string name="language">Language</string>

    <string name="facebook_application_id">525610718262133</string>
    <string name="fb_login_protocol_scheme">fb525610718262133</string>
    <string name="twitter_consumer_key" >qxqkFJe13qvbDmrGB8KOffjkm</string>
    <string name="twitter_consumer_secret">SsVDzz9uUtVfGAOYLko36hDP4KM7J98QKKeV6JBOWBgp3M7C9d</string>
    <string name="active_notification">Active notification</string>
    <string name="c">No restaurant chosen for today</string>
    <string name="nochoicenotif">No restaurant chosen for today</string>
    <string name="choicenotif">\"You are expected  @ \"</string>
    <string name="error">Error with connexion</string>
    <string name="comingg"> is joining !</string>
    <string name="Errorc">Error connexion</string>
</resources>