<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/colorWhite"
    android:padding="5dp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/ColorRed"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/place_info"
        tools:layout_editor_absoluteX="5dp"
        tools:visibility="visible" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/place_info_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/place_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:paddingTop="1dp"
            android:text="@string/place_name"
            android:textAppearance="@style/TxtViewPrincipal"
            app:layout_constraintBottom_toTopOf="@+id/place_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/place_address"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/place_location"
            android:textAppearance="@style/TxtViewSub"
            app:layout_constraintBottom_toTopOf="@+id/place_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_name" />

        <TextView
            android:id="@+id/place_open"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/place_open"
            android:textAppearance="@style/TextAppearanceBlack"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_address" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_info_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/place_info"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/place_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1200m"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearanceBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/place_people_count"
            app:layout_constraintEnd_toStartOf="@+id/place_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/place_people_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/place_people_count"
            app:layout_constraintEnd_toStartOf="@+id/place_people_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/place_people_count"
            app:srcCompat="@drawable/ic_person_outline_black_24dp" />

        <TextView
            android:id="@+id/place_people_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearanceBlack"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/ratingRestaurantDetails"
            app:layout_constraintEnd_toEndOf="@id/place_photo"
            app:layout_constraintStart_toEndOf="@+id/place_people_icon"
            app:layout_constraintTop_toBottomOf="@+id/place_distance" />


        <RatingBar
            android:id="@+id/ratingRestaurantDetails"
            style="@android:style/Widget.Holo.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="8dp"
            android:isIndicator="true"
            android:numStars="3"
            android:progressTint="@color/ColorYellow"
            android:rating="1"
            android:rotation="180"
            android:scaleY="-1"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/place_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_people_count"
            tools:targetApi="lollipop" />


        <ImageView
            android:id="@+id/place_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/colorBlack"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/place_people_count"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 1 | Add an image button -->
    <ImageButton
        android:id="@+id/buttonForClick"
        android:layout_width="407dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" />


</androidx.constraintlayout.widget.ConstraintLayout>