<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/Test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Restaurant Card Top -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TopConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <!-- Restaurant Image -->

            <!-- Restaurant Details -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorWhite"
                app:srcCompat="@drawable/ic_check_circle_green_24dp"
                app:backgroundTint="@color/colorWhite"
                app:elevation="10dp"
                app:hoveredFocusedTranslationZ="20dp"
                app:layout_constraintEnd_toEndOf="@+id/PhotoConstraint"
                app:layout_constraintTop_toTopOf="@+id/PhotoConstraint"
                app:maxImageSize="35dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PhotoConstraint"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/DetailConstraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/SubPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/browser_actions_title_color"
                    android:scaleType="centerCrop"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="206dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/DetailConstraint"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="6dp"
                android:background="@android:color/holo_red_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PhotoConstraint"
               >


                <LinearLayout
                    android:layout_width="411dp"
                    android:layout_height="38dp"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp">


                    <TextView
                        android:id="@+id/subName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="32dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:paddingTop="10dp"
                        android:text="@string/place_name_"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:typeface="monospace"
                        tools:ignore="MissingConstraints" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="20sp">

                        <RatingBar
                            android:layout_marginTop="2dp"
                            android:id="@+id/ratingRestaurantSub"
                            style="@style/RatingBAr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="3"
                            android:progressTint="@color/ColorYellow"
                            android:rotation="180"
                            android:scaleY="-1"
                            android:stepSize="1"
                            tools:targetApi="lollipop" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" >

                    <TextView
                        android:id="@+id/subAdress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/place_adress"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:typeface="monospace"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Restaurant Card Bottom -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/activity_restaurant_card_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <!-- Options Bar -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_restaurant_card_option_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat2"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat2">

                    <!-- Restaurant Call -->
                    <ImageButton
                        android:id="@+id/buttonCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_call_black_24dp"
                        android:backgroundTint="@android:color/holo_red_light" />

                    <TextView
                        android:id="@+id/activity_restaurant_call_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textColor="@android:color/holo_red_light" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat3"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat3"
                    app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat3"
                    app:layout_constraintVertical_bias="0.0">

                    <!-- Like Restaurant -->

                    <ImageButton
                        android:id="@+id/buttonlike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_star_border_black_24dp" />

                    <TextView
                        android:id="@+id/activity_restaurant_like_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        android:textColor="@android:color/holo_red_light" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat3"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat2"
                    app:layout_constraintTop_toBottomOf="parent">

                    <!-- Restaurant Web Site -->
                    <ImageButton
                        android:id="@+id/buttonworld"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iconmap"
                        android:backgroundTint="@android:color/holo_red_light" />

                    <TextView
                        android:id="@+id/activity_restaurant_web_site_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textColor="@android:color/holo_red_light" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- College List -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/activity_restaurant_workmates_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sub_recyclerView"
                android:name="com.m.sofiane.go4lunch.fragment.UserInfoFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>